# miltonmail

./: .cruft.json  .pre-commit-config.yaml  README.md  init_container.sh  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py
.devcontainer/: devcontainer.json
src/miltonmail/: __main__.py  cli.py  config.py  core.py  crypto.py  version.py
tests/: test_config.py  test_crypto.py  test_main.py  test_smoke.py
